--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width", initial-scale="1.0">
     <title>Pomodoro Timer</title>
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="popup/popup.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=YourChosenFont&display=swap">
 </head>
 
@@ -18,6 +18,6 @@
         <div id="timer"></div>
         <button id="start-btn">Start Timer</button>
     </div>
-    <script src="popup.js"></script>
+    <script src="popup/popup.js"></script>
 </body>
 </html>
